gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-cfg_sanitize.rs
#[cfg(not(sanitize = "thread"))]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
fn main() {}

